[gd_scene load_steps=4 format=3 uid="uid://b2s23iu4gm55b"]

[ext_resource type="PackedScene" uid="uid://dkmugdk3auss6" path="res://scenes/towers/slot.tscn" id="1_a6lj6"]
[ext_resource type="Script" path="res://scenes/collection/collection.gd" id="1_p6od8"]
[ext_resource type="Theme" uid="uid://vtdirou58ehe" path="res://scenes/theme.tres" id="2_2uekx"]

[node name="Collection" type="Node2D"]
script = ExtResource("1_p6od8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(80, 72)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 9.0
offset_right = 64.0
offset_bottom = 32.0
theme = ExtResource("2_2uekx")
text = "ALL TOWERS"

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="Slots" type="Node2D" parent="."]
position = Vector2(16, 24)

[node name="SpiderSlots" type="Node2D" parent="Slots"]

[node name="Slot" parent="Slots/SpiderSlots" instance=ExtResource("1_a6lj6")]

[node name="Slot2" parent="Slots/SpiderSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(32, 0)

[node name="Slot3" parent="Slots/SpiderSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(64, 0)

[node name="Slot4" parent="Slots/SpiderSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(96, 0)

[node name="Slot5" parent="Slots/SpiderSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(128, 0)

[node name="Slot6" parent="Slots/SpiderSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(160, 0)

[node name="Slot7" parent="Slots/SpiderSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(192, 0)

[node name="Slot8" parent="Slots/SpiderSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(224, 0)

[node name="SkeletonSlots" type="Node2D" parent="Slots"]
position = Vector2(0, 24)

[node name="Slot" parent="Slots/SkeletonSlots" instance=ExtResource("1_a6lj6")]

[node name="Slot2" parent="Slots/SkeletonSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(32, 0)

[node name="Slot3" parent="Slots/SkeletonSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(64, 0)

[node name="Slot4" parent="Slots/SkeletonSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(96, 0)

[node name="Slot5" parent="Slots/SkeletonSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(128, 0)

[node name="Slot6" parent="Slots/SkeletonSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(160, 0)

[node name="Slot7" parent="Slots/SkeletonSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(192, 0)

[node name="Slot8" parent="Slots/SkeletonSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(224, 0)

[node name="GhostSlots" type="Node2D" parent="Slots"]
position = Vector2(0, 48)

[node name="Slot" parent="Slots/GhostSlots" instance=ExtResource("1_a6lj6")]

[node name="Slot2" parent="Slots/GhostSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(32, 0)

[node name="Slot3" parent="Slots/GhostSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(64, 0)

[node name="Slot4" parent="Slots/GhostSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(96, 0)

[node name="Slot5" parent="Slots/GhostSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(128, 0)

[node name="Slot6" parent="Slots/GhostSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(160, 0)

[node name="Slot7" parent="Slots/GhostSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(192, 0)

[node name="Slot8" parent="Slots/GhostSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(224, 0)

[node name="PumpkinSlots" type="Node2D" parent="Slots"]
position = Vector2(0, 72)

[node name="Slot" parent="Slots/PumpkinSlots" instance=ExtResource("1_a6lj6")]

[node name="Slot2" parent="Slots/PumpkinSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(32, 0)

[node name="Slot3" parent="Slots/PumpkinSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(64, 0)

[node name="Slot4" parent="Slots/PumpkinSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(96, 0)

[node name="Slot5" parent="Slots/PumpkinSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(128, 0)

[node name="Slot6" parent="Slots/PumpkinSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(160, 0)

[node name="Slot7" parent="Slots/PumpkinSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(192, 0)

[node name="Slot8" parent="Slots/PumpkinSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(224, 0)

[node name="OtherSlots" type="Node2D" parent="Slots"]
position = Vector2(0, 96)

[node name="Slot" parent="Slots/OtherSlots" instance=ExtResource("1_a6lj6")]

[node name="Slot2" parent="Slots/OtherSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(64, 0)

[node name="Slot3" parent="Slots/OtherSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(128, 0)

[node name="Slot4" parent="Slots/OtherSlots" instance=ExtResource("1_a6lj6")]
position = Vector2(192, 0)
